--- a/public/styles/o.css
+++ b/public/styles/o.css
@@ -1,183 +1,255 @@
-@import url('https://fonts.googleapis.com/css?family=Cinzel:400,700|Cormorant+Garamond:400,700|Libre+Caslon+Display&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Cinzel:400,700|Cormorant+Garamond:400,700|Libre+Caslon+Display&display=swap");
 
 :root {
-	--primary-color: #333333;
-	--secondary-color: #444444;
-	--primary-dark-color: #ffffff;
-	--overlay-color: rgba(0,0,0,0.7);
+  --primary-color: #333333;
+  --secondary-color: #444444;
+  --primary-dark-color: #ffffff;
+  --overlay-color: rgba(0, 0, 0, 0.7);
 
-	--nav-font: 'Cormorant Garamond', serif;
+  --nav-font: "Cormorant Garamond", serif;
 }
 
-.primary {color: var(--primary-color);}
-.primary-dark {color: var(--primary-dark-color);}
-.secondary { color: var(--secondary-color);}
-.secondary-dark { color: var(--secondary-dark-color);}
+.primary {
+  color: var(--primary-color);
+}
+.primary-dark {
+  color: var(--primary-dark-color);
+}
+.secondary {
+  color: var(--secondary-color);
+}
+.secondary-dark {
+  color: var(--secondary-dark-color);
+}
 
-.bg-primary {background-color: var(--primary-color);}
-.bg-secondary {background-color: var(--secondary-color);}
-.bg-primary-dark {background-color: var(--primary-dark-color);}
-.bg-secondary-dark {background-color: var(--secondary-dark-color);}
+.bg-primary {
+  background-color: var(--primary-color);
+}
+.bg-secondary {
+  background-color: var(--secondary-color);
+}
+.bg-primary-dark {
+  background-color: var(--primary-dark-color);
+}
+.bg-secondary-dark {
+  background-color: var(--secondary-dark-color);
+}
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-family: var(--nav-font);
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: var(--nav-font);
 }
 
-html, body {
-	width: 100vw;
-	line-height: 1.6;
+html,
+body {
+  width: 100vw;
+  line-height: 1.6;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 h1 {
-	line-height: 1.3;
-	font-size: 4rem;
-	color: var(--primary-color);
+  line-height: 1.3;
+  font-size: 4rem;
+  color: var(--primary-color);
 }
 
-ul {list-style-type: none;}
+ul {
+  list-style-type: none;
+}
 
 button {
-	display: inline-block;
-	color: #ffffff;
-	padding: 0.6rem 1.5rem;
-	border: none;
-	cursor: pointer;
-	font-size: 1.2rem;
-	border-radius: 30px;
-	font-weight: bold;
+  display: inline-block;
+  color: #ffffff;
+  padding: 0.6rem 1.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  border-radius: 30px;
+  font-weight: bold;
+}
+
+.bold {
+  font-weight: bold;
+}
+.nav-selected {
+  border-bottom: 1px solid black;
 }
 
 .logo {
-	max-width: 150px;
-	height: auto;
-	margin: 5px;
+  max-width: 150px;
+  height: auto;
+  margin: 5px;
 }
 
 nav {
-	display: grid;
-	grid-template-columns: 1fr 2fr;
-	margin: 0 5vw;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin: 1vh 5vw 0 2vw;
+}
+
+nav > a {
+  max-width: 150px;
 }
 
 nav > ul {
-	display: flex;
-	justify-self: flex-end;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  justify-self: flex-end;
+  align-items: center;
+  justify-content: center;
 }
 
 nav > ul li {
-	color: var(--primary-color);
-	line-height: 1.6;
-	font-size: 1.2rem;
-	margin: 0 1rem;
+  color: var(--primary-color);
+  line-height: 1.6;
+  font-size: 1.2rem;
+  margin: 0 1rem;
 }
 
 nav > ul li a {
-	color: var(--secondary-color);
-	text-decoration: none;
+  color: var(--secondary-color);
+  text-decoration: none;
 }
 
 nav > ul li a:hover {
-	color: #555;
+  color: #555;
 }
 
-
 .section-block {
-	display: grid;
-	grid-template: 'data img' / 2fr 1fr;
+  display: grid;
+  /* grid-template: "data img" / 2fr 1fr; */
+  height: 80vh;
+  grid-template: "data img" / auto 40%;
 }
 
 .section-block > main {
-	align-self: center;
-	margin-left: 5rem;
-	grid-area: data;
+  width: 35vw;
+  align-self: center;
+  margin-right: 5rem;
+  margin-left: auto;
+  grid-area: data;
+}
+
+main > h1 {
+  opacity: 0;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-delay: 1.5s;
+  animation-fill-mode: forwards;
 }
 
 .section-block > main > ul {
-	margin: 1rem 0;
-	color: var(--primary-color);
-	font-size: 1.1rem;
+  margin: 1rem 0;
+  color: var(--primary-color);
+  font-size: 1.3rem;
+
+  opacity: 0;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-delay: 2.25s;
+  animation-fill-mode: forwards;
+  transition: linear;
+}
+
+.section-block button {
+  opacity: 0;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-delay: 2.7s;
+  animation-fill-mode: forwards;
+  transition: linear;
 }
 
 .section-block > img {
-	max-width: 500px;
-	margin: 1rem 4rem;
-	justify-self: center;
-	align-self: center;
-	grid-area: img;
-	width: 30vw;
-	height: auto;
+  max-width: 500px;
+  /* margin: 1rem 4rem; */
+  justify-self: left;
+  align-self: center;
+  grid-area: img;
+  width: 100%;
+  height: auto;
+  padding-right: 3vw;
+
+  opacity: 0;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
 }
-
-
 
 /* Utilities */
 .btn {
-	animation-name: fadein;
-	animation-duration: 1s;
-	animation-delay: 1.25s;
-	opacity: 0;
-	animation-fill-mode: forwards;
-	transition: linear;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-delay: 1.25s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  transition: linear;
 }
 
-
-
+.section-hero {
+  height: 30vh;
+  background-image: url("../Assets/Bag_Optimized.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
 @media only screen and (max-width: 1000px) {
-	.section-block {
-		height: 100vh;
-		grid-template: 'img'  1fr 'data' 2fr/ 100vw;
-	}
+  .section-block {
+    height: 100vh;
+    grid-template: "img" 1fr "data" 2fr/ 100vw;
+  }
 
-	.section-block > img {
-		margin: 0.2rem 1rem;
-		width: 50vw;
-		height: auto;
-		min-width: 300px;
-		max-width: 500px;
-	}
+  .section-block > img {
+    margin: 0.2rem 1rem;
+    width: 50vw;
+    height: auto;
+    min-width: 300px;
+    max-width: 500px;
+  }
 
-	.logo {
-		min-width: 5px;
-		width: 30vw;
-	}
+  .logo {
+    min-width: 5px;
+    width: 30vw;
+  }
 
-	.main-block {
-		height: 50vh;
-		
-	}
+  .main-block {
+    height: 50vh;
+  }
 
-	.section-block > main {
-		text-align: center;
-		align-self: center;
-		margin: -1rem 1rem 1rem 1rem;
-		grid-area: data;
-	}
+  .section-block > main {
+    width: auto;
+    text-align: center;
+    align-self: start;
+    margin: -1rem 1rem 1rem 1rem;
+    grid-area: data;
+  }
 
+  .section-block > img {
+    justify-self: center;
+  }
 
-	nav {
-		grid-template-columns: 1fr 1fr;
-		margin: 0 1vw;
-		width: 100vw;
-	}
+  nav {
+    grid-template-columns: 1fr 1fr;
+    margin: 0 1vw;
+    width: 100vw;
+  }
 
-	nav > ul li {
-		visibility: hidden;
-		position: absolute;
-	}
-	
+  nav > ul li {
+    visibility: hidden;
+    position: absolute;
+  }
 }
 
 @keyframes fadein {
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
