--- a/public/styles/o.css
+++ b/public/styles/o.css
@@ -170,8 +170,10 @@ main > h1 {
   justify-self: left;
   align-self: center;
   grid-area: img;
-  width: 100%;
-  height: auto;
+  width: auto;
+  max-width: 100vw;
+  height: 80%;
+  max-height: 100vh;
   padding-right: 3vw;
 
   opacity: 0;
