--- a/public/styles/Temporary.css
+++ b/public/styles/Temporary.css
@@ -4,7 +4,18 @@
   --nav-font: "Cormorant Garamond", serif;
 }
 
-html {
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: var(--nav-font);
+}
+
+html,
+body {
+  height: 100vh;
+}
+
+body {
   background: url("../Assets/Bag Beans.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -12,66 +23,29 @@ html {
   background-size: cover;
   background-origin: content-box;
   background-position: 75% 25%;
-}
-
-* {
-  color: white;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: var(--nav-font);
-}
-
-.text {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%) translateX(-10%);
-  width: 100%;
-  text-align: right;
-}
-
-h1 {
-  font-size: 5rem;
-  margin: 0;
-}
-
-h2 {
-  font-size: 3rem;
-  margin: 0;
-  color: rgb(255, 255, 255);
-}
-
-main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-areas: ". text";
-  height: 100vh;
-}
-
-main > section {
-  grid-area: text;
-  align-self: center;
-  justify-self: center;
-  text-align: center;
+  grid-template-areas: ". data";
 }
 
 .logo {
   width: 45vw;
   height: auto;
+  min-width: 230px;
 }
 
-@media only screen and (max-width: 800px) {
-  main {
-    grid-template-columns: 1fr;
-    grid-template-areas: "text";
-  }
+main {
+  grid-area: data;
+  justify-self: right;
+  text-align: center;
+  color: white;
+  align-self: center;
+  margin-right: 0.5rem;
+}
 
-  main > section {
-    justify-self: right;
-
-    text-align: right;
-    margin: 1rem 3rem;
-    padding: 1rem;
-  }
+h2 {
+  font-size: 7vw;
+  margin: 0;
+  color: rgb(255, 255, 255);
+  max-width: 500px;
 }
