--- a/public/styles/AboutUs.css
+++ b/public/styles/AboutUs.css
@@ -1,18 +1,139 @@
+@import url('https://fonts.googleapis.com/css?family=Cinzel:400,700|Cormorant+Garamond:400,700|Libre+Caslon+Display&display=swap');
+
+:root {
+  --primary-color: #333333;
+  --secondary-color: #444444;
+  --primary-dark-color: #ffffff;
+  --overlay-color: rgba(0, 0, 0, 0.7);
+
+  --nav-font: 'Cormorant Garamond', serif;
+}
+
+.primary {
+  color: var(--primary-color);
+}
+.primary-dark {
+  color: var(--primary-dark-color);
+}
+.secondary {
+  color: var(--secondary-color);
+}
+.secondary-dark {
+  color: var(--secondary-dark-color);
+}
+
+.bg-primary {
+  background-color: var(--primary-color);
+}
+.bg-secondary {
+  background-color: var(--secondary-color);
+}
+.bg-primary-dark {
+  background-color: var(--primary-dark-color);
+}
+.bg-secondary-dark {
+  background-color: var(--secondary-dark-color);
+}
+
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: var(--nav-font);
+}
+
+html,
+body {
+  width: 100%;
+  line-height: 1.6;
+}
+
+h1 {
+  line-height: 1.3;
+  font-size: 4rem;
+  color: var(--primary-color);
+}
+
+ul {
+  list-style-type: none;
+}
+
+button {
+  display: inline-block;
+  color: #ffffff;
+  padding: 0.6rem 1.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  border-radius: 30px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.bold {
+  font-weight: bold;
+}
+.nav-selected {
+  border-bottom: 1px solid black;
+}
+
+.logo {
+  max-width: 150px;
+  height: auto;
+  margin: 5px;
+}
+
+nav {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin: 1vh 5vw 0 2vw;
+}
+
+nav > a {
+  max-width: 150px;
+}
+
+nav > ul {
+  display: flex;
+  justify-self: flex-end;
+  align-items: center;
+  justify-content: center;
+}
+
+nav > ul li {
+  color: var(--primary-color);
+  line-height: 1.6;
+  font-size: 1.2rem;
+  margin: 0 1rem;
+}
+
+nav > ul li a {
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
+nav > ul li a:hover {
+  color: #555;
+}
+
+.main-block {
+  height: fit-content;
 }
 
 main {
   display: grid;
-  grid-template: "img data" / 2fr 1fr;
-  height: fit-content;
-  width: 100vh;
+  grid-template: 'img data' / 1fr 1fr;
+  /* height: fit-content; */
+  width: 100vw;
 }
 
 main > img {
   grid-area: img;
-  max-height: 40vh;
-  margin: 1rem;
+  height: 100%;
+  width: auto;
+  margin: 0 1rem;
+  /* max-height: 698px;
+  max-width: 412px; */
   justify-self: right;
   align-self: center;
 }
@@ -21,9 +142,36 @@ main > section {
   grid-area: data;
   align-self: center;
   margin: 1rem;
+  width: 80%;
+  max-width: 500px;
+  text-align: justify;
 }
 
 main > section > p {
   margin: 1.5rem 0;
   line-height: 1.6;
+  font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+@media only screen and (max-width: 1200px) {
+  main {
+    /* height: fit-content; */
+    grid-template: 'img' 1fr 'data' 1fr/ 100vw;
+    overflow-x: hideen;
+  }
+
+  main > img {
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    object-fit: cover;
+    justify-self: center;
+  }
+
+  main > section {
+    grid-area: data;
+    justify-self: center;
+    width: 90%;
+  }
 }
