--- a/public/styles/AboutUs.css
+++ b/public/styles/AboutUs.css
@@ -1,18 +1,17 @@
-* {
-  box-sizing: content-box;
-}
-
 main {
   display: grid;
-  grid-template: "img data" / 2fr 1fr;
-  height: fit-content;
-  width: 100vh;
+  grid-template: 'img data' / 1fr 1fr;
+  /* height: fit-content; */
+  width: 100vw;
 }
 
 main > img {
   grid-area: img;
-  max-height: 40vh;
-  margin: 1rem;
+  height: 100%;
+  width: auto;
+  margin: 0 1rem;
+  /* max-height: 698px;
+  max-width: 412px; */
   justify-self: right;
   align-self: center;
 }
@@ -21,9 +20,38 @@ main > section {
   grid-area: data;
   align-self: center;
   margin: 1rem;
+  width: 80%;
+  max-width: 500px;
+  text-align: justify;
 }
 
 main > section > p {
   margin: 1.5rem 0;
   line-height: 1.6;
+  font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+@media only screen and (max-width: 1200px) {
+  main {
+    /* height: fit-content; */
+    grid-template: 'img' 80% 'data' auto/ 100%;
+    height: 100%;
+  }
+
+  main > img {
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    object-fit: cover;
+    justify-self: center;
+    margin: 0;
+    padding: 1rem 0;
+  }
+
+  main > section {
+    grid-area: data;
+    justify-self: center;
+    width: 90%;
+  }
 }
